<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="178dp"
        android:layout_height="151dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="8dp"
        android:background="#646464"
        android:clipToPadding="true"
        android:onClick="womensPage"
        app:cardBackgroundColor="#FFAB00"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#21DAF3"
            android:onClick="womensPage"
            app:srcCompat="@drawable/zzz" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="180dp"
        android:layout_height="151dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="mensPage"
        app:cardBackgroundColor="#FFAB00"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="180dp"
            android:layout_height="151dp"
            android:background="#BB9BE2"
            android:onClick="mensPage"
            app:srcCompat="@drawable/zzz" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="178dp"
        android:layout_height="157dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="132dp"
        android:onClick="kidsPage"
        app:cardBackgroundColor="#FFAB00"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#BB9BE2"
            android:onClick="kidsPage"
            app:srcCompat="@drawable/zzz" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="182dp"
        android:layout_height="158dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="132dp"
        android:onClick="babiesPage"
        app:cardBackgroundColor="#FFAB00"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#21DAF3"
            android:onClick="babiesPage"
            app:srcCompat="@drawable/zzz" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="151dp"
        android:layout_height="33dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="22dp"
        android:onClick="womensPage"
        android:text="@string/Women_v"
        android:textAlignment="center"
        android:textColor="#0A0A0A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="28dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="26dp"
        android:onClick="mensPage"
        android:text="@string/mens_v"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="129dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="87dp"
        android:onClick="kidsPage"
        android:text="@string/kids_v"
        android:textAlignment="center"
        android:textColor="#090808"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="30dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="88dp"
        android:onClick="babiesPage"
        android:text="@string/babies_v"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="411dp"
        android:layout_height="73dp"
        android:background="#FFDD31"
        android:text="@string/fashion_v"
        android:textAlignment="center"
        android:textColor="#030303"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>